# altaris-super-agent-releases

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: build-images.yml  ci.yml  desktop-release.yml  publish-release.yml  release.yml  vsce-publish.yml
api/: .dockerignore  Altaris.sln  Dockerfile
cli/: ALTARIS.md  package.json
cli/scripts/: build.ts  grpc-cli.ts  no-telemetry-plugin.ts  provider-bootstrap.ts  provider-launch.ts  provider-recommend.ts  release.ts  render-coverage-heatmap.ts  start-grpc.ts  system-check.ts  verify-no-phone-home.ts
cli/src/: QueryEngine.ts  Tool.ts  commands.ts  context.ts  cost-tracker.ts  history.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingState.test.ts  projectOnboardingSteps.ts  query.ts  setup.ts  tools.ts
desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: api.rs  auth.rs  chat.rs  lib.rs  main.rs  terminal.rs
docs/: APPLE-CERT-PERSONEL-NOTU.md  CODE-SIGNING.md  PRODUCTION.md
docs/legal/: derivation-risk.md
infra/: .env.production.example  docker-compose.prod.yml  docker-compose.yml
infra/caddy/: Caddyfile
scripts/: deploy-prod.sh  generate-apple-cert.sh
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  altaris.vsix  bunfig.toml  esbuild.js  package.json
web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+1326 files in other folders)
