[package]
name = "altaris-desktop"
version = "0.1.0-alpha.1"
description = "Altaris — Argus Teknoloji enterprise AI desktop"
authors = ["Argus Teknoloji"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "altaris_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
keyring = "3"
anyhow = "1"
futures-util = "0.3"
portable-pty = "0.8"
bytes = "1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
